@@ -293,7 +293,12 @@ enumerator_init_copy(obj, orig)
     struct enumerator *ptr0, *ptr1;
 
     ptr0 = enumerator_ptr(orig);
-    ptr1 = enumerator_ptr(obj);
+
+    Data_Get_Struct(obj, struct enumerator, ptr1);
+
+    if (!ptr1) {
+	rb_raise(rb_eArgError, "unallocated enumerator");
+    }
 
     ptr1->obj  = ptr0->obj;
     ptr1->meth = ptr0->meth;
