@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2008-06-03"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20080603
-#define RUBY_PATCHLEVEL 3
+#define RUBY_PATCHLEVEL 4
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
